# kobitoKey-rmk

./: .gitignore  Cargo.toml  README.md  flake.nix  keyboard.toml  memory.x  vial.json
.github/workflows/: build.yml
reset/: Cargo.toml  build.rs  memory.x
reset/.cargo/: config.toml
reset/src/: main.rs
